l10n(machinetranslators): modules bundle
- Bundle test for modules
- refactor: deprecate bundle messages in main

Signed-off-by: Hiroshi Miura <miurahr@linux.com>